# discord-rs-bot

./: .containerignore  Cargo.toml  Containerfile  flake.nix
src/: main.rs
src/commands/: leave.rs  mod.rs  ping.rs  play.rs  skip.rs  volume.rs
src/events/: mod.rs  voice_events.rs
