[package]
name = "discord-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serenity = { features = ["voice"], git = "https://github.com/serenity-rs/serenity", branch = "next" }
songbird = { features = ["builtin-queue"], git = "https://github.com/serenity-rs/songbird", branch = "next" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5" }
reqwest = "0.11"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
