[package]
name = "discord-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3.28"
reqwest = "0.11.20"
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = "0.15"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
rev = "139b6854d557175ccade5b77dc4b2b0475c57816"
default-features = false
features = ["driver", "gateway", "twilight", "rustls", "builtin-queue"]
